Closed
Bug 1280188
Opened 10 years ago
Closed 1 year ago
aria-owns shouldn't affect text exposure for contentEditables
Categories
(Core :: Disability Access APIs, defect, P3)
Tracking
()
RESOLVED
FIXED
136 Branch
| Tracking | Status | |
|---|---|---|
| firefox136 | --- | fixed |
People
(Reporter: Jamie, Assigned: eeejay)
References
(Blocks 2 open bugs)
Details
(Keywords: papercut)
Attachments
(1 file)
STR:
1. Start Firefox and NVDA.
2. Open this URL: data:text/html,<ul id="list"><li>item</li></ul><div contentEditable="true" role="textbox" aria-owns="list">text</div>
3. Focus the text box.
4. Press end.
Expected: NVDA should say "blank".
Actual: NVDA says "list, bullet".
While the new aria-owns implementation is definitely a great thing and it does need to expose appropriate embedded objects via text interfaces, I don't think it should affect text interfaces for contentEditable/designMode. For contentEditable, because the user uses the caret as a primary means of navigation, it's important that the text exactly reflects what the user can reach with the caret. The real world impact here is for autocompletes, since many autocomplete lists use aria-owns so that they are "owned" by the text box.
| Reporter | ||
Comment 1•10 years ago
|
||
Clarification: I'm not suggesting we change the exposure of the hierarchy, just the embedded objects that are exposed via text interfaces. So, in this case, the list should still be a "child" of the text box. However, the list should *not* be exposed as an embedded object via the text interface on the text box.
Comment 2•10 years ago
|
||
CC'ing Steve Faulkner since this might affect some of the ARIA to platform API mapping and may need an addition/change for the text interface specific stuff.
Updated•9 years ago
|
Priority: -- → P2
Comment 3•7 years ago
|
||
Moving to p3 because no activity for at least 1 year(s).
See https://github.com/mozilla/bug-handling/blob/master/policy/triage-bugzilla.md#how-do-you-triage for more information
Priority: P2 → P3
| Reporter | ||
Comment 4•6 years ago
|
||
Chrome goes a step further here and disallows aria-owns completely for editable controls. That's probably easier and less brittle, and honestly, I think it's reasonable given the problems this causes.
Updated•3 years ago
|
Severity: normal → S3
| Assignee | ||
Comment 7•1 year ago
|
||
I favor removing them from the hierarchy, not just the embedded character text tree. I think the inconsistency between the object and text tree, and the inconsistency between read only and read/write text trees will bite us.
Assignee: nobody → eitan
| Assignee | ||
Comment 8•1 year ago
|
||
Updated•1 year ago
|
Attachment #9460344 -
Attachment description: Bug 1280188 - Don't relocate children into editable content. r?nlapre → Bug 1280188 - Don't relocate children in or out of editable content. r?nlapre
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cd0b5f3fb276
Don't relocate children in or out of editable content. r=nlapre
Comment 10•1 year ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 1 year ago
status-firefox136:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 136 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•