Bug 1280188 - Don't relocate children in or out of editable content. r=nlapre

Depends on D234768

Differential Revision: https://phabricator.services.mozilla.com/D234769